2008-11-10  Andrew Haley  <aph@redhat.com>

	Backport from mainline:

        PR bootstrap/33304
        * vec.h (VEC_TA): New.
        (DEF_VEC_I, DEF_VEC_P, DEF_VEC_ALLOC_I, DEF_VEC_ALLOC_P,
        DEF_VEC_O, DEF_VEC_ALLOC_O: Use VEC_TA.
        * c-common.c (C_COMMON_FIXED_TYPES_SAT): New macro.
        (C_COMMON_FIXED_MODE_TYPES_SAT): New macro.
        (C_COMMON_FIXED_TYPES): Remove first arg.
        (C_COMMON_FIXED_MODE_TYPES): Likewise.
        * tree.c (MAKE_FIXED_TYPE_NODE): Break into two macros,
        MAKE_FIXED_TYPE_NODE and MAKE_FIXED_TYPE_NODE_WIDTH in order
        not to use empty macro arguments.

2008-11-10  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-11-10  Ralph Loader  <suckfish@ihug.co.nz>

	PR middle-end/37807
	PR middle-end/37809
	* combine.c (force_to_mode): Do not process vector types.

	* rtlanal.c (nonzero_bits1): Do not process vector types.
	(num_sign_bit_copies1): Likewise.

2008-11-06  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-09-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/37489
	* cse.c (fold_rtx): Don't return const_true_rtx for float
	compare if FLOAT_STORE_FLAG_VALUE is undefined.

2008-11-06  Kazu Hirata  <kazu@codesourcery.com>

	PR target/35574
	* config/sparc/predicates.md (const_double_or_vector_operand):
	New.
	* config/sparc/sparc.c (sparc_extra_constraint_check): Handle the
	'D' constraint.
	* config/sparc/sparc.h: Document the 'D' constraint.
	* config/sparc/sparc.md (*movdf_insn_sp32_v9, *movdf_insn_sp64):
	Use the 'D' constraint in addition to 'F' in some alternatives.
	(DF splitter): Generalize for V64mode.
	* doc/md.texi (SPARC): Document the 'D' constraint.

2008-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR c/37924
	* combine.c (make_compound_operation): Don't call make_extraction with
	non-positive length.
	(simplify_shift_const_1): Canonicalize count even if complement_p.

	PR tree-optimization/37879