@@ -3314,8 +3314,8 @@ vect_analyze_data_refs (loop_vec_info loop_vinfo)
 
 	  if (vect_print_dump_info (REPORT_DETAILS))
 	    {
-	      fprintf (dump_file, "analyze in outer-loop: ");
-	      print_generic_expr (dump_file, inner_base, TDF_SLIM);
+	      fprintf (vect_dump, "analyze in outer-loop: ");
+	      print_generic_expr (vect_dump, inner_base, TDF_SLIM);
 	    }
 
 	  outer_base = get_inner_reference (inner_base, &pbitsize, &pbitpos, 
@@ -3325,7 +3325,7 @@ vect_analyze_data_refs (loop_vec_info loop_vinfo)
 	  if (pbitpos % BITS_PER_UNIT != 0)
 	    {
 	      if (vect_print_dump_info (REPORT_DETAILS))
-		fprintf (dump_file, "failed: bit offset alignment.\n");
+		fprintf (vect_dump, "failed: bit offset alignment.\n");
 	      return false;
 	    }
 
@@ -3333,7 +3333,7 @@ vect_analyze_data_refs (loop_vec_info loop_vinfo)
 	  if (!simple_iv (loop, stmt, outer_base, &base_iv, false))
 	    {
 	      if (vect_print_dump_info (REPORT_DETAILS))
-		fprintf (dump_file, "failed: evolution of base is not affine.\n");
+		fprintf (vect_dump, "failed: evolution of base is not affine.\n");
 	      return false;
 	    }
 
@@ -3353,7 +3353,7 @@ vect_analyze_data_refs (loop_vec_info loop_vinfo)
 	  else if (!simple_iv (loop, stmt, poffset, &offset_iv, false))
 	    {
 	      if (vect_print_dump_info (REPORT_DETAILS))
-	        fprintf (dump_file, "evolution of offset is not affine.\n");
+	        fprintf (vect_dump, "evolution of offset is not affine.\n");
 	      return false;
 	    }
 
@@ -3376,18 +3376,18 @@ vect_analyze_data_refs (loop_vec_info loop_vinfo)
 	  STMT_VINFO_DR_ALIGNED_TO (stmt_info) = 
 				size_int (highest_pow2_factor (offset_iv.base));
 
-	  if (dump_file && (dump_flags & TDF_DETAILS))
+	  if (vect_print_dump_info (REPORT_DETAILS))
 	    {
-	      fprintf (dump_file, "\touter base_address: ");
-	      print_generic_expr (dump_file, STMT_VINFO_DR_BASE_ADDRESS (stmt_info), TDF_SLIM);
-	      fprintf (dump_file, "\n\touter offset from base address: ");
-	      print_generic_expr (dump_file, STMT_VINFO_DR_OFFSET (stmt_info), TDF_SLIM);
-	      fprintf (dump_file, "\n\touter constant offset from base address: ");
-	      print_generic_expr (dump_file, STMT_VINFO_DR_INIT (stmt_info), TDF_SLIM);
-	      fprintf (dump_file, "\n\touter step: ");
-	      print_generic_expr (dump_file, STMT_VINFO_DR_STEP (stmt_info), TDF_SLIM);
-	      fprintf (dump_file, "\n\touter aligned to: ");
-	      print_generic_expr (dump_file, STMT_VINFO_DR_ALIGNED_TO (stmt_info), TDF_SLIM);
+	      fprintf (vect_dump, "\touter base_address: ");
+	      print_generic_expr (vect_dump, STMT_VINFO_DR_BASE_ADDRESS (stmt_info), TDF_SLIM);
+	      fprintf (vect_dump, "\n\touter offset from base address: ");
+	      print_generic_expr (vect_dump, STMT_VINFO_DR_OFFSET (stmt_info), TDF_SLIM);
+	      fprintf (vect_dump, "\n\touter constant offset from base address: ");
+	      print_generic_expr (vect_dump, STMT_VINFO_DR_INIT (stmt_info), TDF_SLIM);
+	      fprintf (vect_dump, "\n\touter step: ");
+	      print_generic_expr (vect_dump, STMT_VINFO_DR_STEP (stmt_info), TDF_SLIM);
+	      fprintf (vect_dump, "\n\touter aligned to: ");
+	      print_generic_expr (vect_dump, STMT_VINFO_DR_ALIGNED_TO (stmt_info), TDF_SLIM);
 	    }
 	}
 
